# queens-solver

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/queens_solver/: board.py  main.py
