[project]
name = "queens-solver"
version = "0.1.1"
description = "coming soon"
readme = "README.md"
authors = [
    { name = "Benjamin Groves", email = "benjaminjgroves@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
queens-solver = "queens_solver:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"